--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+
+# Java
+*.class
+*.jar
+*.war
+*.ear
+hs_err_pid*
+**/.classpath
+**/.settings/
+**/.project
+/target/
+/bin/
+
